
2017-10-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c: changed message format back to old version, see bug #455

2017-10-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_sys_fork): bug #451 reset cob_process_id after fork
	* Makefile.am: moved include of top_srcdir to AM_CPPFLAGS to prevent
	  user-specified CPPFLAGS to override own includes, see bug #452
	* common.c, common.h: minimal support for DJGGP,
	  including generation of 8.3 filenames

2017-10-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_check_ref_mod): bug #446 splitted checks for length and
	  combination of offset and length
	* common.c (cob_external_addr): bug #445 added supressible warning for
	  EXTERNAL data items that are requested with a smaller size than allocated
	* common.c (cob_check_version): FR #239: allow difference in module version
	  vs. runtime version
	FR #239 - adjustments for changed function signatures between 2.0-rc and 2.3:
	* common.c (cob_check_odo): adjustments for changed function signature 
	* common.c (cob_check_subscript, cob_check_version): don't check subscript
	  max if at least one module is too old for the current function signature

2017-09-28  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c (cob_screen_get_all): changed backspace to emit beep if
	  entered at start of field, not to act like back-tab (bug #426).

2017-09-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_sig_handler, cob_set_signal): added code for SIGFPE
	  in correspondence to SIGHUP code (+ additional error message);
	  set LCOV_EXCL markers for most of the signal handling

2017-09-18  Ron Norman <rjn@inglenet.com>

	* fileio.c: Check if file ASSIGN field has NULL address and report a
	  runtime error and return status 31

2017-09-16  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c (field_display): implemented DISPLAY ALL "blah" WITH SIZE
	  (bug #428).
